lemon/platform/traefik/config/middleware-coraza.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: coraza
  namespace: traefik
spec:
  plugin:
    coraza:
      directives:
      - SecRuleEngine On
      - SecDebugLog /dev/stdout
      - SecDebugLogLevel 9
      - Include @crs-setup.conf.example
      - Include @owasp_crs/*.conf
