lemon/platform/traefik/config/middleware-denyip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: denyip
  namespace: traefik
spec:
  plugin:
    denyip:
      ipDenyList:
      - 104.197.69.115
      - 109.149.23.4
      - 121.127.34.106
      - 121.91.235.186
      - 13.56.149.3
      - 147.185.132.76
      - 148.153.56.62
      - 155.248.184.241
      - 157.143.20.83
      - 157.143.30.12
      - 159.65.216.50
      - 159.89.194.131
      - 16.145.94.216
      - 164.90.151.185
      - 164.92.107.174
      - 172.192.18.188
      - 185.12.59.118
      - 185.242.177.50
      - 185.247.137.152
      - 185.247.137.178
      - 185.247.137.212
      - 185.247.137.225
      - 188.166.49.70
      - 192.159.99.95
      - 193.142.147.209
      - 195.178.110.201
      - 198.235.24.152
      - 20.168.113.228
      - 20.24.218.130
      - 205.169.39.0/24
      - 208.84.101.251
      - 216.106.189.40
      - 23.98.91.210
      - 2.58.56.101
      - 3.101.132.77
      - 3.233.59.216
      - 34.123.170.104
      - 34.26.246.252
      - 35.167.205.129
      - 37.46.196.22
      - 4.147.185.30
      - 4.189.171.149
      - 4.189.253.242
      - 4.194.85.10
      - 4.217.217.154
      - 4.218.20.75
      - 44.200.137.196
      - 45.135.193.9
      - 51.77.218.191
      - 74.7.175.0/24
      - 74.7.227.0/24
      - 78.153.140.171
      - 78.153.140.179
      - 79.100.14.146
      - 87.236.176.180
      - 87.236.176.225
      - 87.236.176.234
      - 87.236.176.234
      - 91.239.216.99
      - 95.214.52.170
